resources/media-store/sonarr/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: web
      port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
